<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group  android:checkableBehavior="single" android:id="@+id/nav_menu_group">
        <item android:id="@+id/nav_menu_user_info" android:title="@string/nav_user_profile" android:icon="@android:drawable/sym_def_app_icon" />
        <item android:id="@+id/nav_menu_eventHistory" android:title="@string/nav_event_history" android:icon="@android:drawable/ic_menu_my_calendar" />
        <item android:id="@+id/nav_menu_suspendedList" android:title="@string/nav_suspended_list" android:icon="@android:drawable/ic_menu_my_calendar" />
    </group>
    <group android:id="@+id/group_logout" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_menu_logout"
            android:title="@string/nav_log_out"
            android:icon="@android:drawable/ic_lock_power_off"
            android:orderInCategory="100" />
    </group>
</menu>