<!-- res/layout/item_user.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!-- Avatar -->
    <TextView
        android:id="@+id/eventFrag_eventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/event_Name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eventFrag_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/event_Date"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/eventFrag_eventName"
        app:layout_constraintStart_toStartOf="@id/eventFrag_eventName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eventFrag_Time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/event_Time"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/eventFrag_Date"
        app:layout_constraintStart_toStartOf="@id/eventFrag_Date"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eventFrag_Duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/event_Duration"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/eventFrag_Time"
        app:layout_constraintStart_toStartOf="@id/eventFrag_Time"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eventFrag_Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/event_Description"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/eventFrag_Duration"
        app:layout_constraintStart_toStartOf="@id/eventFrag_Duration"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
