<!-- res/layout/item_user.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!-- Avatar -->
    <ImageView
        android:id="@+id/adminFrag_avatar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/nav_user_profile"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adminFrag_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nav_user_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/adminFrag_avatar"
        app:layout_constraintStart_toEndOf="@id/adminFrag_avatar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/adminFrag_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/registered_userEmail"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/adminFrag_userName"
        app:layout_constraintStart_toStartOf="@id/adminFrag_userName"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/adminFrag_accountType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/registered_userAccountType"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/adminFrag_email"
        app:layout_constraintStart_toStartOf="@id/adminFrag_email"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/adminFrag_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/registered_userStatus"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/adminFrag_accountType"
        app:layout_constraintStart_toStartOf="@id/adminFrag_accountType"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
