<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Email Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signUp_email"
        app:boxBackgroundMode="none"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUp_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Password Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/logIn_password"
        app:boxBackgroundMode="none"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_emailLayout"
        app:layout_constraintVertical_bias="0.0"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUp_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize"
           />
    </com.google.android.material.textfield.TextInputLayout>

 <!--   Account Type Selection -->
    <RadioGroup
        android:id="@+id/signUp_accountTypeSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/signUp_passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/adminRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountType_Admin" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/hostRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountType_Host" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/participantRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountType_Participant" />
    </RadioGroup>
    <!--    Submit or Cancel-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp_submitButton"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        app:cornerRadius="16dp"
        app:iconPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/signUp_accountTypeSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signUp_cancelButton"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_submitButton"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
